<resources>
    <!-- Login and signup views -->
    <string name="app_name">Keystroke Dynamics</string>
    <string name="signup">No account yet? Create one!</string>
    <string name="signup_button">Create account</string>
    <string name="login_button">Login</string>
    <string name="login">Already a member? Login!</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="registration_text">Registration</string>
    <string name="login_text">Login in</string>
    <string name="github">github.com/michasacuer</string>

    <!-- Signup validation -->
    <string name="nameValidation">At least 3 characters!</string>
    <string name="passwordValidation">Password need to have at least 4 characters!</string>
    <string name="emailValidation">Enter a valid Email address!</string>

    <!-- Signup email -->
    <string name="subject">Keystrok Dynamics - Registration</string>
    <string name="welcome">Welcome User! Thats your registration data:</string>
    <string name="signup_succed">New user registered!</string>
    <string name="signup_error">Registration error!</string>

    <!-- Login Validation -->
    <string name="login_succed">Welcome back!</string>
    <string name="login_error">Wrong login details!</string>

    <!-- Main Activity -->
    <string name="floating_btn_addmeasure">Add measure</string>
    <string name="floating_btn_classification">Classification</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="user">User:</string>

    <!-- Add Measure Activity -->
    <string name="measure_string">9RJhl6a0n</string>
    <string name="measure_instruction">Enter the text below:</string>
    <string name="measure_labelhint">Enter text here</string>
    <string name="measure_acceptbutton">Accept</string>
    <string name="measure_cancelbutton">Cancel</string>
    <string name="logout">Logout</string>

    <!-- Navbar -->
    <string name="nav_logout">Logout</string>
    <string name="nav_info">About</string>

    <!-- Progres dialog -->
    <string name="communicate">Please wait...</string>

    <!-- Expandable list -->
    <string name="measure">Measure</string>

    <!-- Info Dialog -->
    <string name="keystroke">Keystroke Dynamics</string>
    <string name="information">About</string>
    <string name="content">User recognition by typing speed (realse time).</string>
    <string name="classification_content">Classified user: </string>
</resources>
